[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://src/assets/fonts/Indie_Flower/IndieFlower-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=10]
size = 100
outline_size = 2
outline_color = Color( 0.176471, 0.384314, 0.364706, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="pausedTitle" type="Label" parent="."]
margin_left = 256.0
margin_top = 77.0
margin_right = 768.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.639216, 0.960784, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.176471, 0.384314, 0.364706, 1 )
custom_fonts/font = SubResource( 10 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resumeButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 304.0
margin_right = 704.0
margin_bottom = 384.0
focus_neighbour_left = NodePath("../quitButton")
focus_neighbour_top = NodePath("../quitButton")
focus_neighbour_right = NodePath("../restartButton")
focus_neighbour_bottom = NodePath("../restartButton")
custom_fonts/font = SubResource( 14 )
shortcut_in_tooltip = false
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restartButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 432.0
margin_right = 500.0
margin_bottom = 512.0
focus_neighbour_left = NodePath("../resumeButton")
focus_neighbour_top = NodePath("../resumeButton")
focus_neighbour_right = NodePath("../quitButton")
focus_neighbour_bottom = NodePath("../quitButton")
custom_fonts/font = SubResource( 11 )
shortcut_in_tooltip = false
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="Button" parent="."]
margin_left = 524.0
margin_top = 432.0
margin_right = 704.0
margin_bottom = 512.0
focus_neighbour_left = NodePath("../restartButton")
focus_neighbour_top = NodePath("../resumeButton")
focus_neighbour_right = NodePath("../resumeButton")
focus_neighbour_bottom = NodePath("../resumeButton")
custom_fonts/font = SubResource( 11 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="resumeButton" to="." method="_on_resumeButton_pressed"]
[connection signal="pressed" from="restartButton" to="." method="_on_restartButton_pressed"]
[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
